--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -2,6 +2,9 @@
 $roboto: 'Roboto', sans-serif;
 $nunito: 'Nunito Sans', sans-serif;
 $dmSans: 'DM Sans', sans-serif;
+// color 
+$primaryColor : #5F41FF;
+
 
 
 // Responsive Variables
