--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,6 +7,7 @@
 @forward './components/service';
 @forward './components/banner';
 @forward './components/portfolio';
+@forward './components/qualification';
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
 @forward './components/footer';
