--- a/assets/scss/abstracts/_common.scss
+++ b/assets/scss/abstracts/_common.scss
@@ -81,6 +81,9 @@ CSS INDEX
 .mr-38 {
     margin-right: 38px;
   }
+.mt-24 {
+    margin-top: 24px;
+}
 .mt-29 {
     margin-top: 29px;
 }
@@ -92,6 +95,9 @@ CSS INDEX
 }
 .mt-44 {
     margin-top: 44px;
+}
+.mt-54 {
+    margin-top: 54px;
 }
 .pt-56 {
     padding-top: 56px;
