--- a/assets/scss/components/_qualification.scss
+++ b/assets/scss/components/_qualification.scss
@@ -34,7 +34,6 @@
     margin-top: 27px;
     margin-bottom: 0;
 }
-
 .qua-button {
 	background: #F6F6F6;
 	padding: 44px;
@@ -44,3 +43,73 @@
 .qualification-button span path {
     fill: #5F41FF;
   }
+  .philip-available {
+	background-image: url("../img/avaliable/image.jpg");
+	background-repeat: no-repeat;
+	position: relative;
+	background-size: cover;
+	padding-top: 105px;
+	padding-bottom: 87px;
+	padding-left: 70px;
+	padding-right: 196px;
+	border-radius: 11px;
+}
+// .philip-available::before {
+// 	content: '';
+// 	display: block;
+// 	height: 100%;
+// 	width: 100%;
+// 	background: #0000008f;
+// 	position: absolute;
+// }
+// .philip-available-content {
+// 	padding: 104px 196px 87px 70px;
+// }
+.philip-available-content h6 {
+    font-size: 16px;
+    margin: 0;
+    font-family: $dmSans;
+    font-weight: 600px;
+    color: #fff;
+}
+.philip-available-content h3 {
+    font-size: 40px;
+    font-family: $roboto;;
+    color: #fff;
+    margin-top: 9px;
+    margin-bottom: 0;
+}
+.philip-available-content p {
+    font-size: 16px;
+    font-family: $nunito;
+    font-weight: 400;
+    margin-bottom: 0;
+    color: #DFDFDF;
+}
+
+.philip-available-content .philip-button2 a {
+    background-color: transparent;
+	color: #fff;
+	height: 60px;
+	width: 150px;
+    border: 1px solid #ffffff;
+	font-family: "Nunito Sans", sans-serif;
+	text-decoration: none;
+	display: inline-block;
+	border-radius: 8px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+}
+.philip-available-content .philip-button2 a:hover {
+    background-color: #5F41FF;
+    color: #fff;
+    border: 1px solid #5F41FF;
+    transition: 0.5s;
+}
