--- a/assets/scss/abstracts/_common.scss
+++ b/assets/scss/abstracts/_common.scss
@@ -81,8 +81,14 @@ CSS INDEX
 .mr-38 {
     margin-right: 38px;
   }
+  .mt-8 {
+    margin-top: 8px;
+  }
 .mt-24 {
     margin-top: 24px;
+}
+.mt-28 {
+    margin-top: 28px;
 }
 .mt-29 {
     margin-top: 29px;
@@ -95,6 +101,9 @@ CSS INDEX
 }
 .mt-44 {
     margin-top: 44px;
+}
+.mt-47 {
+    margin-top: 47px;
 }
 .mt-54 {
     margin-top: 54px;
