--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $nunito: 'Nunito Sans', sans-serif;
 $dmSans: 'DM Sans', sans-serif;
 // color 
 $primaryColor : #5F41FF;
+$textColor: #737373;
 
 
 
