--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,6 +8,8 @@
 @forward './components/banner';
 @forward './components/portfolio';
 @forward './components/qualification';
+@forward './components/blog';
+@forward './components/testimonial';
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
 @forward './components/footer';
