--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 @forward './components/qualification';
 @forward './components/blog';
 @forward './components/testimonial';
+@forward './components/counter';
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
 @forward './components/footer';
