--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 ************
 *************************
@@ -1914,7 +1913,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
-  content: "";
+  content: "\f107";
   font-family: "Font Awesome 5 Pro";
   font-weight: 500;
   color: #1a1a1a;
@@ -2205,8 +2204,8 @@ input:focus::placeholder, textarea:focus::placeholder {
 }
 
 .video-button span {
-  border: 10px solid #4168FF12;
-  background: #f000;
+  border: 10px solid rgba(65, 104, 255, 0.0705882353);
+  background: rgba(255, 0, 0, 0);
   height: 80px;
   width: 80px;
   display: inline-block;
@@ -2266,7 +2265,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   font-weight: 600;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
-  border: 4px solid #5F41FF42;
+  border: 4px solid rgba(95, 65, 255, 0.2588235294);
 }
 
 @-webkit-keyframes myAnim {
@@ -2489,7 +2488,7 @@ input:focus::placeholder, textarea:focus::placeholder {
   width: 100%;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-  background: #00000075;
+  background: rgba(0, 0, 0, 0.4588235294);
   color: #fff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -2593,8 +2592,8 @@ input:focus::placeholder, textarea:focus::placeholder {
 *************************************************************** */
 .philip-qualification-box {
   padding: 31px 31px 58px 31px;
-  -webkit-box-shadow: 5px 9px 18px -2px #d2d2d23b;
-          box-shadow: 5px 9px 18px -2px #d2d2d23b;
+  -webkit-box-shadow: 5px 9px 18px -2px rgba(210, 210, 210, 0.231372549);
+          box-shadow: 5px 9px 18px -2px rgba(210, 210, 210, 0.231372549);
 }
 
 .philip-qualification-box-title h3 {
@@ -2707,8 +2706,8 @@ input:focus::placeholder, textarea:focus::placeholder {
 *************************************************************** */
 .philip-blog-card {
   border-radius: 9px;
-  -webkit-box-shadow: 6px 2px 9px 7px #e3e3e30a;
-          box-shadow: 6px 2px 9px 7px #e3e3e30a;
+  -webkit-box-shadow: 6px 2px 9px 7px rgba(227, 227, 227, 0.0392156863);
+          box-shadow: 6px 2px 9px 7px rgba(227, 227, 227, 0.0392156863);
   background-color: #fff;
 }
 
@@ -2789,6 +2788,27 @@ input:focus::placeholder, textarea:focus::placeholder {
   width: 40px;
   height: 5px;
   border-radius: 0%;
+}
+
+/*
+************
+*************************
+23. Counter
+******************************************************* 
+*************************************************************** */
+.counter-content h5 {
+  margin-bottom: 0;
+  font-size: 34px;
+  font-weight: bold;
+  color: #161616;
+  font-family: "Roboto", sans-serif;
+}
+.counter-content p {
+  color: #515151;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-bottom: 0;
 }
 
 /*
@@ -2881,7 +2901,7 @@ input:focus::placeholder, textarea:focus::placeholder {
 }
 .progress-wrap::after {
   position: absolute;
-  content: "";
+  content: "\f176";
   font-family: "Font Awesome 5 Pro";
   text-align: center;
   line-height: 46px;
