--- a/assets/scss/components/_about.scss
+++ b/assets/scss/components/_about.scss
@@ -33,8 +33,11 @@
     bottom: 91px;
     left: -14px;
   }
-  .philip-section-content {
-    margin: 0;
+  .philip-section-heading {
+    color: black;
+    font-size: 60px;
+    font-weight: bold;
+    text-transform: capitalize;
   }
   .philip-section-heading {
     margin-bottom: 22px;
