--- a/assets/scss/components/back-to-top.scss
+++ b/assets/scss/components/back-to-top.scss
@@ -49,7 +49,7 @@
 	}
 	svg.progress-circle {
 		path {
-			stroke: #F94D1C;
+			stroke: #5F41FF;
 			stroke-width: 4;
 			box-sizing: border-box;
             @include transition(0.3s);
