--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @forward './components/testimonial';
 @forward './components/counter';
 @forward './components/contact';
+@forward './components/about_page_banner';
 @forward './components/responsive';
 @forward './components/section_title';
 @forward './components/back-to-top.scss';
