--- a/assets/scss/abstracts/_common.scss
+++ b/assets/scss/abstracts/_common.scss
@@ -59,6 +59,12 @@ CSS INDEX
 .mr-16 {
     margin-right: 16px;
 }
+.mr-60 {
+    margin-right: 60px;
+}
+.ml-82 {
+    margin-left: 82px;
+}
 .mb-8 {
     margin-bottom: 8px;
   }
@@ -93,11 +99,17 @@ CSS INDEX
 .mt-7 {
     margin-top: 7px;
 }
+.mt-17 {
+    margin-top: 17px;
+}
 .mt-23 {
     margin-top: 23px;
 }
 .mt-24 {
     margin-top: 24px;
+}
+.mt-26 {
+    margin-top: 26px;
 }
 .mt-28 {
     margin-top: 28px;
@@ -129,11 +141,26 @@ CSS INDEX
 .mt-54 {
     margin-top: 54px;
 }
+.mt-76 {
+    margin-top: 76px;
+}
 .pt-56 {
     padding-top: 56px;
   }
 .pt-109 {
     padding-top: 109px;
+}
+.pt-114 {
+    padding-top: 114px;
+}
+.pt-182 {
+    padding-top: 182px;
+}
+.pt-224 {
+    padding-top: 224px;
+}
+.pb-162 {
+    padding-bottom: 162px;
 }
   
 .img,img {
