--- a/assets/scss/components/_blog.scss
+++ b/assets/scss/components/_blog.scss
@@ -66,7 +66,8 @@
         color: $primaryColor;
         transition: .3s;
     }
+
 }
-.user-details span path {
-    color: red;
+.user-details a:hover span path {
+    fill: $primaryColor;
 }
